fix header spacing

--- a/CSS/page-top-styles.css
+++ b/CSS/page-top-styles.css
@@ -60,7 +60,8 @@
     justify-content: space-evenly;
     align-items: center;
     gap: 10px;
-    padding: 10px 0;
+    padding-top: 20px;
+    padding-bottom: 12px;
     margin: 0px 25%;
     /* margin-bottom: -35px; */
     margin-top: -35px;
